# kirk

./: Cargo.toml  README.md  SENIOR_ENGINEER_ANALYSIS.md
.kiro/specs/cashu-nostr-game-protocol/: design.md  requirements.md  tasks.md
.kiro/specs/cli-card-game/: design.md  requirements.md  tasks.md
.kiro/specs/production-hardening/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
cli-card-game/: Cargo.toml  README.md
cli-card-game/.cargo/: config.toml
cli-card-game/src/: app.rs  components.rs  config.rs  keys.rs  main.rs  repl.rs  resources.rs
docs/: API.md  COMMITMENTS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
examples/: IMPLEMENTATION_SUMMARY.md  README.md  demo_flexibility.rs  demo_flow.rs  usage_guide.rs
examples/games/: mod.rs
proptest-regressions/cashu/: commitments.txt
src/: config.rs  error.rs  lib.rs
src/cashu/: commitments.rs  mint.rs  mod.rs  sequence_processor.rs  tokens.rs
src/cashu/services/: event_processor.rs  fraud_detector.rs  metrics_collector.rs  mod.rs  reward_distributor.rs  sequence_manager.rs  timeout_manager.rs
src/client/: mod.rs  player.rs  validator.rs
src/events/: challenge.rs  final_event.rs  mod.rs  move_event.rs  reward.rs  tests.rs  timeout_tests.rs
src/game/: card_game.rs  mod.rs  pieces.rs  timeout_validation_tests.rs  traits.rs  validation.rs
src/observability/: health.rs  metrics.rs  mod.rs  tracing.rs
src/performance/: backpressure.rs  connection_pool.rs  data_structures.rs  memory_management.rs  mod.rs
src/security/: crypto_audit.rs  input_validation.rs  mod.rs  rate_limiting.rs  time_validation.rs
tests/: lib.rs  sequence_processor_integration.rs
tests/integration/: concurrency_tests.rs  event_chain_tests.rs  example_games_tests.rs  full_game_tests.rs  mint_validation_tests.rs  mod.rs  timeout_integration_tests.rs
tests/mocks/: cashu_mint.rs  mod.rs  nostr_relay.rs  reference_game.rs
tests/property/: commitment_security.rs  game_logic.rs  mod.rs
tests/unit/: c_value_tests.rs  commitment_tests.rs  event_tests.rs  game_trait_tests.rs  mod.rs  p2pk_token_tests.rs  timeout_tests.rs
