[package]
name = "kirk"
version = "0.1.0"
edition = "2021"
description = "A trustless gaming protocol combining Cashu ecash tokens with Nostr events"
license = "MIT"
repository = "https://github.com/your-org/kirk"
keywords = ["cashu", "nostr", "gaming", "ecash", "cryptography"]
categories = ["games", "cryptography"]

[dependencies]
# Cashu integration - use latest stable CDK release
cdk = "0.12.1"

# Nostr integration - reuse existing rust-nostr functionality  
nostr = { version = "0.35" }
nostr-sdk = { version = "0.35" }

# Cryptography for commitments
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"