[package]
name = "kirk"
version = "0.1.0"
edition = "2021"
description = "A trustless gaming protocol combining Cashu ecash tokens with Nostr events"
license = "MIT"
repository = "https://github.com/your-org/kirk"
keywords = ["cashu", "nostr", "gaming", "ecash", "cryptography"]
categories = ["games", "cryptography"]

[dependencies]
# Cashu integration - use local submodule for modifications
cdk = { path = "deps/cdk/crates/cdk" }
cashu = { path = "deps/cdk/crates/cashu", features = ["kirk"] }

# Nostr integration - reuse existing rust-nostr functionality  
nostr = { version = "0.35" }
nostr-sdk = { version = "0.35" }

# Cryptography for commitments
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Input validation and security
validator = "0.16"
regex = "1.0"

# Rate limiting
tokio-util = "0.7"

# Configuration management
toml = "0.8"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tempfile = "3.0"
# CDK SQLite for testing
cdk-sqlite = { path = "deps/cdk/crates/cdk-sqlite", features = ["wallet"] }
# Property-based testing
proptest = "1.0"
# UUID generation for mocks
uuid = { version = "1.0", features = ["v4"] }

# Example binaries
[[example]]
name = "demo_flow"
path = "examples/demo_flow.rs"

[[example]]
name = "demo_flexibility"
path = "examples/demo_flexibility.rs"

[[example]]
name = "usage_guide"
path = "examples/usage_guide.rs"